src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    @apply scroll-smooth;
}

body {
    @apply bg-gradient-to-b from-secondary via-40% via-primary to-primary text-white;
}

::selection {
    @apply bg-quaternary text-primary
}

.header {
    @apply text-5xl md:text-8xl font-semibold text-quaternary;
}

.sub-header {
    @apply text-4xl md:text-5xl font-semibold text-quaternary text-center md:text-start;
}

.summary {
    @apply text-lg md:text-xl space-y-8;
}

.badge {
    @apply place-self-center py-1 px-4 bg-quaternary rounded-full text-lg text-primary;
}

.badge:hover .tooltip {
    @apply visible;
}

.button {
    @apply ring-tertiary active:ring;
}

/* Primary icon button with black background */
.icon-button {
    @apply cursor-pointer hover:bg-black hover:bg-opacity-10 active:bg-opacity-0 p-2 rounded-full ring-tertiary active:ring;
}

.icon-button:hover .tooltip {
    @apply visible;
}

/* Secondary icon button with white background */
.icon-button-white {
    @apply cursor-pointer hover:bg-white hover:bg-opacity-10 active:bg-opacity-0 p-2 rounded-full ring-tertiary active:ring;
}

.icon-button-white:hover .tooltip {
    @apply visible;
}

.next-link {
    @apply block transition-all w-max p-10 md:p-20 text-5xl md:text-6xl lg:text-7xl xl:text-8xl font-semibold rounded-full border-tertiary border-2 border-opacity-0 hover:border-opacity-100 hover:-translate-y-2;
}

